# jot

./: .gitignore  CLAUDE.md  Cargo.toml  IMPL_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml  samples.yml
crates/jot/: Cargo.toml
crates/jot-builder/: Cargo.toml
crates/jot-builder/src/: compile.rs  diagnostics.rs  doc.rs  errors.rs  graph.rs  lib.rs  manifest.rs  package.rs  workspace.rs
crates/jot-builder/src/compile/: javac.rs  kotlinc.rs  mod.rs
crates/jot-cache/: Cargo.toml
crates/jot-cache/src/: lib.rs
crates/jot-common/: Cargo.toml
crates/jot-common/src/: archive.rs  lib.rs  lock.rs
crates/jot-config/: Cargo.toml
crates/jot-config/src/: dependencies.rs  discovery.rs  editing.rs  errors.rs  lib.rs  models.rs  raw.rs
crates/jot-devtools/: Cargo.toml
crates/jot-devtools/src/: audit.rs  format.rs  lib.rs  lint.rs  models.rs
crates/jot-devtools/src/format/: google_java_format.rs  ktlint.rs  mod.rs
crates/jot-devtools/src/lint/: detekt.rs  mod.rs  pmd.rs
crates/jot-platform/: Cargo.toml
crates/jot-platform/src/: lib.rs
crates/jot-resolver/: Cargo.toml
crates/jot-resolver/src/: coordinate.rs  errors.rs  lib.rs  models.rs  resolver.rs  versions.rs
crates/jot-toolchain/: Cargo.toml
crates/jot-toolchain/src/: lib.rs
crates/jot/src/: cli.rs  init_templates.rs  main.rs  utils.rs
crates/jot/src/commands/: audit.rs  bench.rs  build.rs  deps.rs  mod.rs  project.rs  publish.rs  render.rs  run.rs  self_mgmt.rs  toolchain.rs
docs/: DESIGN_PROPOSAL.md  DX_RESEARCH.md  SURVEY.md  USER_GUIDE.md
docs/adr/: 001-no-check-command.md
samples/java-app/: README.md  jot.toml
samples/java-app/src/com/jot/samples/minimal/: Main.java
samples/java-app/test/com/jot/samples/minimal/: MainTest.java
samples/java-apt/: jot.toml
samples/java-apt/src/main/java/com/jot/samples/ap/: Main.java
samples/java-apt/src/main/java/com/jot/samples/ap/dto/: Car.java
samples/java-apt/src/main/java/com/jot/samples/ap/mapper/: CarMapper.java
samples/java-bench/src/bench/java/com/example/: StringConcatBenchmark.java
samples/java-kotlin/src/main/java/com/jot/samples/mixed/: Main.java
samples/java-kotlin/src/main/kotlin/com/jot/samples/mixed/: Greeter.kt
samples/java-lib/: jot.toml
samples/java-web/: jot.toml
samples/java-web/src/main/java/com/jot/samples/webserver/: ServerMain.java
samples/java-web/src/main/java/com/jot/samples/webserver/model/: Car.java  CarDto.java  CarMapper.java
samples/java-web/src/test/java/com/jot/samples/webserver/: ServerMainTest.java
samples/java-workspace/: jot.toml  libs.versions.toml
samples/java-workspace/api/src/main/java/com/jot/samples/workspace/api/: ApiMain.java
samples/java-workspace/api/src/test/java/com/jot/samples/workspace/api/: ApiMainTest.java
samples/java-workspace/cli/: jot.toml
samples/java-workspace/cli/src/main/java/com/jot/samples/workspace/cli/: CliMain.java
samples/java-workspace/cli/src/test/java/com/jot/samples/workspace/cli/: CliMainTest.java
samples/java-workspace/domain/: jot.toml
samples/java-workspace/domain/src/main/java/com/jot/samples/workspace/domain/: Order.java
samples/java-workspace/domain/src/test/java/com/jot/samples/workspace/domain/: OrderTest.java
samples/java/annotation-processing/: jot.toml
samples/java/annotation-processing/src/main/java/com/jot/samples/ap/dto/: CarDto.java
samples/java/benchmarks/: jot.toml
samples/java/cli/: .gitignore  README.md  jot.toml
samples/java/cli/src/main/java/com/jot/samples/cli/: CliMain.java
samples/java/cli/src/test/java/com/jot/samples/cli/: CliMainTest.java
samples/java/minimal-app/src/test/java/com/jot/samples/minimal/: MainTest.java
samples/java/multi-module-workspace/: .gitignore  README.md
samples/java/multi-module-workspace/api/: jot.toml
samples/java/multi-module-workspace/cli/: jot.toml
samples/java/multi-module-workspace/cli/src/main/java/com/jot/samples/workspace/cli/: CliMain.java
samples/java/multi-module-workspace/cli/src/test/java/com/jot/samples/workspace/cli/: CliMainTest.java
samples/java/multi-module-workspace/domain/: jot.toml
samples/java/webserver/: README.md  jot.toml
samples/java/webserver/src/test/java/com/jot/samples/webserver/: ServerMainTest.java
samples/kotlin-app/: jot.toml
samples/kotlin/minimal-app/src/com/jot/samples/kotlin/: Main.kt
samples/kotlin/mixed-java-kotlin/: jot.toml
samples/kotlin/mixed-java-kotlin/src/main/java/com/jot/samples/mixed/: Main.java
