[workspace]
members = [
	"crates/jot",
	"crates/jot-cache",
	"crates/jot-config",
	"crates/jot-platform",
	"crates/jot-toolchain",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
directories = "5.0.1"
flate2 = "1.1.1"
hex = "0.4.3"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8.20"
toml_edit = "0.22.24"
zip = { version = "2.4.1", default-features = false, features = ["deflate"] }
