[workspace]
members = [
	"crates/jot",
	"crates/jot-builder",
	"crates/jot-cache",
	"crates/jot-common",
	"crates/jot-config",
	"crates/jot-devtools",
	"crates/jot-platform",
	"crates/jot-resolver",
	"crates/jot-toolchain",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.98"
annotate-snippets = "0.12.13"
clap = { version = "4.5.38", features = ["derive"] }
directories = "5.0.1"
flate2 = "1.1.1"
fs2 = "0.4.3"
hex = "0.4.3"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
quick-xml = { version = "0.38.1", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tabled = { version = "0.17", features = ["ansi"] }
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8.20"
toml_edit = "0.22.24"
walkdir = "2.5.0"
yansi = "1.0.1"
zip = { version = "2.4.1", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
