[package]
name = "jot-builder"
version.workspace = true
edition.workspace = true

[dependencies]
annotate-snippets = "0.12.13"
jot-config = { path = "../jot-config" }
jot-resolver = { path = "../jot-resolver" }
jot-toolchain = { path = "../jot-toolchain" }
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true