[package]
name = "jot-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
annotate-snippets = "0.12.13"
jot-common = { path = "../jot-common" }
jot-config = { path = "../jot-config" }
jot-resolver = { path = "../jot-resolver" }
jot-toolchain = { path = "../jot-toolchain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true