[package]
name = "jot-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flate2.workspace = true
hex.workspace = true
indicatif.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zip.workspace = true
