[package]
name = "jot-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jot-cache = { path = "../jot-cache" }
jot-common = { path = "../jot-common" }
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
