[package]
name = "jot-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
fs2.workspace = true
hex.workspace = true
indicatif.workspace = true
jot-cache = { path = "../jot-cache" }
jot-platform = { path = "../jot-platform" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
flate2.workspace = true
zip.workspace = true
