[package]
name = "jot-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
fs2.workspace = true
indicatif.workspace = true
jot-cache = { path = "../jot-cache" }
jot-common = { path = "../jot-common" }
jot-platform = { path = "../jot-platform" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
zip.workspace = true
