[package]
name = "jot"
version.workspace = true
edition.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
fs2.workspace = true
jot-builder = { path = "../jot-builder" }
jot-cache = { path = "../jot-cache" }
jot-config = { path = "../jot-config" }
jot-devtools = { path = "../jot-devtools" }
jot-resolver = { path = "../jot-resolver" }
jot-toolchain = { path = "../jot-toolchain" }
tempfile.workspace = true
toml.workspace = true
